@@ -308,3 +308,5 @@ Revision	Version Updated		Log Message
 286		C++			Now remove enough older landless nations.
 287		C++			Read certain settings (V2 directory, game type, etc) from configuration.txt
 288		C++			Refactor reading of localized province names.
+289		C++			Administrative republics convert to democracies, not monarchies.
+290		C++			Write all countries to the file, even if they don't exist yet. Fixes releasing cultural unions, etc.
